fix styling on quiz on mobile - remove padding

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,7 +129,7 @@ h1 {
 
 #quiz-bg {
     background-color: rgba(71, 158, 167, 0.49);
-    padding: 50px;
+    padding: 50px 0;
     min-height: 80%;
 }
 
